--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,9 @@ h1 {
 .TodoForm {
   width: 100%;
   margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .todo-input {
@@ -55,6 +58,8 @@ h1 {
   border: none;
   padding: 0.55rem;
   cursor: pointer;
+  display: inline-block;
+  margin-left: 20px;
 }
 
 .Todo {
@@ -97,4 +102,27 @@ h1 {
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+.filter-todo {
+  padding: 1rem;
+}
+select {
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background-color: #8758ff;
+}
+
+/* Custom Select */
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+select {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  width: 12rem;
 }
